# Athena

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.hermes/: PROJECT_CONTEXT.md
athena/: __init__.py  orchestrator.py
athena/common/: config.py  models.py
athena/core/: __init__.py  dna_versioning.py  engine.py  freqtrade_wrapper.py  hyperopt.py  jesse_wrapper.py  strategy_loader.py
athena/evaluator/: __init__.py  robustness.py  scorer.py
athena/generator/: dna.py  ga_engine.py  ml_predictor.py  templates.py
athena/live/: bot_manager.py  data_downloader.py  deployer.py  feed.py  feedback.py  forward_scheduler.py  freqtrade_config.py  runner.py  scheduler.py
athena/market/: downloader.py  provider.py  regime.py
athena/portfolio/: manager.py
athena/services/: api.py  bridge.py  forward_runner.py  (+2 more)
docs/: ARCHITECTURE.md
scripts/: diagnose_bot.py  quick_roundtrip.py  run_paper_validation.py  run_search.py  run_search_small.py  smoke_test.py  test_backtest_forced.py  test_backtest_longonly.py  test_backtest_loose.py  test_backtest_sanity.py  test_cli_backtest.py  test_raw_backtest.py  verbose_backtest.py
tests/: test_api_endpoints.py  test_api_forward_pnl.py  test_bot_manager.py  test_bridge.py  test_dashboard.py  test_dna_versioning.py  test_downloader.py  test_drift.py  test_e2e.py  test_feedback.py  test_forward_drift.py  test_forward_runner.py  test_forward_scheduler.py  test_hyperopt.py  test_hyperopt_expand.py  test_integration.py  test_ml_predictor.py  test_portfolio.py  test_regime.py  test_regime_basket.py  test_risk_budget_sizing.py  test_telemetry.py
(+1 files in other folders)
