[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "athena"
version = "0.1.0"
description = "AI strategy generator on Freqtrade framework"
authors = [{name="Athena Team"}]
requires-python = ">=3.10"
dependencies = [
    "freqtrade",
    "ccxt",
    "pandas-ta",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "scikit-learn",
    "deap",
    "pytest",
    "pytest-asyncio",
    "prometheus-client",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')", "timeout: marks tests with a custom timeout threshold"]
filterwarnings = [
    "ignore:coroutine 'Exchange._api_reload_markets' was never awaited:RuntimeWarning",
]
